Archive2/19/b0756ca4ae8f54/output
main.cpp:9:4: error: definition of implicitly declared default constructor
A::A(){ };
   ^
1 error generated.
